feat: add pagination list user

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,9 @@ spring:
     drop-first: false
     contexts: dev
     change-log: classpath:db/changelog/db.changelog-master.yaml
-  logging:
-    level:
-      liquibase: DEBUG
+logging:
+  level:
+    root: TRACE
+    org.springframework: INFO
+    com.farukgenc.boilerplate.springboot: INFO
+    liquibase: DEBUG
