--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,12 @@ services:
     networks:
       - app-network
 
+  redis:
+    image: redis:5.0.6
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
   app:
     build:
       context: .
