--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 			<version>6.3.1.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 		<!-- Liquibase -->
 		<dependency>
 			<groupId>org.liquibase</groupId>
