--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.data.redis.port=6379
 
 jobrunr.background-job-server.enabled=true
 jobrunr.dashboard.enabled=true
+jobrunr.database.type=sql
+jobrunr.background-job-server.delete-succeeded-jobs-after=24h
+jobrunr.background-job-server.permanently-delete-deleted-jobs-after=48h
