feat: handle refresh token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.redis.host=localhost
+spring.redis.port=6379
 
 jobrunr.background-job-server.enabled=true
 jobrunr.dashboard.enabled=true
