--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Envaitoment ###
+src/main/resources/application.properties
+src/main/resources/application.yml
