feat: add rabbitmp

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,6 +51,18 @@ services:
     networks:
       - app-network
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq_spring
+    ports:
+      - "5672:5672" # Standard AMQP port
+      - "15672:15672" # Management UI port
+    environment:
+      # Optional: set default user and password
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    restart: always
+
 volumes:
   mysql_data:
 
